--- a/package.json
+++ b/package.json
@@ -9,12 +9,89 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "@juggle/resize-observer": "^3.3.1",
+    "@portabletext/react": "^1.0.3",
+    "@react-three/a11y": "^2.2.3",
+    "@react-three/drei": "^8.10.6",
+    "@react-three/fiber": "^7.0.19",
+    "@react-three/postprocessing": "^2.3.1",
+    "@sanity/image-url": "^1.0.1",
+    "@use-gesture/react": "^10.2.9",
+    "animejs": "^3.2.1",
+    "classnames": "^2.3.1",
+    "device-detector-js": "^3.0.0",
+    "framer-motion": "^6.2.8",
+    "framer-motion-3d": "^6.2.8",
+    "gsap": "^3.10.4",
+    "hls.js": "^1.1.5",
+    "hotkeys-js": "^3.8.7",
+    "lethargy": "^1.0.9",
+    "leva": "^0.9.23",
+    "lodash": "^4.17.21",
+    "next": "12.1.0",
+    "next-plugin-svgr": "^1.1.1",
+    "next-sanity": "^0.5.0",
+    "next-sanity-image": "^3.2.1",
+    "prop-types": "^15.7.2",
+    "r3f-perf": "^4.9.1",
+    "react": "17.0.2",
+    "react-accessible-dropdown-menu-hook": "^3.2.0",
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.33.1",
+    "react-masonry-css": "^1.0.16",
+    "sanity-mux-player": "^0.0.27",
+    "short-uuid": "^4.2.0",
+    "snifferjs": "^4.1.0",
+    "spacetime": "^7.1.2",
+    "stats.js": "^0.17.0",
+    "swiper": "^8.0.7",
+    "three": "^0.137.0",
+    "url-parse": "^1.5.6",
+    "zustand": "^3.6.5"
   },
   "devDependencies": {
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "@babel/core": "^7.16.0",
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
+    "@reflektor/eslint-plugin-react": "^1.1.2",
+    "@storybook/addon-actions": "^6.4.15",
+    "@storybook/addon-essentials": "^6.4.15",
+    "@storybook/addon-links": "^6.4.15",
+    "@storybook/builder-webpack5": "^6.4.15",
+    "@storybook/manager-webpack5": "^6.4.15",
+    "@storybook/react": "^6.4.15",
+    "@welldone-software/why-did-you-render": "^6.2.1",
+    "babel-loader": "^8.2.3",
+    "chalk": "^4.1.2",
+    "change-case": "^4.1.2",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^12.0.4",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "inquirer": "^8.2.0",
+    "lint-staged": "^11.2.6",
+    "maxstache": "^1.0.7",
+    "mkdirp": "^1.0.4",
+    "postcss": "^8.4.7",
+    "postcss-scss": "^4.0.3",
+    "sass": "^1.43.4",
+    "simple-zustand-devtools": "^1.0.1",
+    "storybook-addon-next": "^1.6.0",
+    "stylelint": "^14.0.1",
+    "stylelint-scss": "^4.0.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
+    "webpack": "^5.64.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint"
+    ],
+    "*.scss": [
+      "stylelint"
+    ]
   }
 }
