--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "component": "node scripts/component",
     "store": "node scripts/store",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "netlify": "netlify"
   },
   "dependencies": {
     "@juggle/resize-observer": "^3.3.1",
@@ -34,6 +35,7 @@
     "lethargy": "^1.0.9",
     "leva": "^0.9.23",
     "lodash": "^4.17.21",
+    "netlify-cli": "^10.3.3",
     "next": "12.1.0",
     "next-plugin-svgr": "^1.1.1",
     "next-sanity": "^0.5.0",
