--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-plugin-svgr": "^1.1.1",
     "next-sanity": "^0.5.0",
     "next-sanity-image": "^3.2.1",
+    "nice-color-palettes": "^3.0.0",
     "prop-types": "^15.7.2",
     "r3f-perf": "^4.9.1",
     "react": "17.0.2",
