--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-three/fiber": "^7.0.19",
     "@react-three/postprocessing": "^2.3.1",
     "@sanity/image-url": "^1.0.1",
+    "@types/three": "^0.141.0",
     "@use-gesture/react": "^10.2.9",
     "animejs": "^3.2.1",
     "canvas-sketch-util": "^1.10.0",
