--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@juggle/resize-observer": "^3.3.1",
     "@react-three/a11y": "^2.2.3",
-    "@react-three/drei": "^7.20.5",
+    "@react-three/drei": "8.10.6",
     "@react-three/fiber": "^7.0.19",
     "@react-three/postprocessing": "^2.0.5",
     "breakpoint-sass": "^2.7.1",
