--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reflektor-boilerplate-react-next",
+  "name": "panda_duanwu",
   "version": "1.0.0",
   "private": true,
   "engines": {
